--- a/Test/DCM on support set.ipynb
+++ b/Test/DCM on support set.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-14T21:06:36.146750Z",
-     "start_time": "2025-06-14T21:06:36.081875Z"
+     "end_time": "2025-06-17T20:42:49.669515Z",
+     "start_time": "2025-06-17T20:42:46.525296Z"
     }
    },
    "cell_type": "code",
@@ -16,14 +16,25 @@
     "outcomes, features = datasets.load_support()"
    ],
    "id": "c74e1e76e408bbf2",
-   "outputs": [],
-   "execution_count": 38
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\anaconda3\\envs\\FLCausalMixture\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "D:\\anaconda3\\envs\\FLCausalMixture\\lib\\site-packages\\requests\\__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-14T21:06:36.967511Z",
-     "start_time": "2025-06-14T21:06:36.913653Z"
+     "end_time": "2025-06-17T20:42:51.392546Z",
+     "start_time": "2025-06-17T20:42:51.329484Z"
     }
    },
    "cell_type": "code",
@@ -40,13 +51,13 @@
    ],
    "id": "149960d9d4190fa9",
    "outputs": [],
-   "execution_count": 39
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-14T21:06:38.051675Z",
-     "start_time": "2025-06-14T21:06:38.032700Z"
+     "end_time": "2025-06-17T20:42:52.990039Z",
+     "start_time": "2025-06-17T20:42:52.977073Z"
     }
    },
    "cell_type": "code",
@@ -58,13 +69,13 @@
    ],
    "id": "333115929dc91943",
    "outputs": [],
-   "execution_count": 40
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-14T21:06:39.243506Z",
-     "start_time": "2025-06-14T21:06:39.220566Z"
+     "end_time": "2025-06-17T20:42:54.700501Z",
+     "start_time": "2025-06-17T20:42:54.678522Z"
     }
    },
    "cell_type": "code",
@@ -95,31 +106,31 @@
        "array([ 14.,  58., 252.])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 41
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-14T21:06:40.955939Z",
-     "start_time": "2025-06-14T21:06:40.949955Z"
+     "end_time": "2025-06-17T20:42:56.976374Z",
+     "start_time": "2025-06-17T20:42:56.970418Z"
     }
    },
    "cell_type": "code",
    "source": "from sklearn.model_selection import ParameterGrid",
    "id": "7ec919696c8e9cb0",
    "outputs": [],
-   "execution_count": 42
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-14T21:06:41.946291Z",
-     "start_time": "2025-06-14T21:06:41.927343Z"
+     "end_time": "2025-06-17T20:42:58.503293Z",
+     "start_time": "2025-06-17T20:42:58.497305Z"
     }
    },
    "cell_type": "code",
@@ -132,13 +143,13 @@
    ],
    "id": "728d8ac548d2dc89",
    "outputs": [],
-   "execution_count": 43
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-14T21:51:26.889563Z",
-     "start_time": "2025-06-14T21:50:20.022291Z"
+     "end_time": "2025-06-17T20:43:58.110305Z",
+     "start_time": "2025-06-17T20:42:59.813783Z"
     }
    },
    "cell_type": "code",
@@ -158,29 +169,29 @@
      "text": [
       "  0%|          | 0/100 [00:00<?, ?it/s]D:\\anaconda3\\envs\\FLCausalMixture\\lib\\site-packages\\auton_survival\\models\\dcm\\dcm_utilities.py:105: RuntimeWarning: invalid value encountered in log\n",
       "  probs = gates+np.log(event_probs)\n",
-      "  1%|          | 1/100 [00:00<00:49,  1.99it/s]D:\\anaconda3\\envs\\FLCausalMixture\\lib\\site-packages\\auton_survival\\models\\dcm\\dcm_utilities.py:105: RuntimeWarning: divide by zero encountered in log\n",
+      "  1%|          | 1/100 [00:00<01:02,  1.57it/s]D:\\anaconda3\\envs\\FLCausalMixture\\lib\\site-packages\\auton_survival\\models\\dcm\\dcm_utilities.py:105: RuntimeWarning: divide by zero encountered in log\n",
       "  probs = gates+np.log(event_probs)\n",
-      " 90%|█████████ | 90/100 [01:06<00:07,  1.35it/s]\n"
+      " 90%|█████████ | 90/100 [00:58<00:06,  1.55it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<auton_survival.models.dcm.DeepCoxMixtures at 0x124d150f3d0>"
+       "<auton_survival.models.dcm.DeepCoxMixtures at 0x1a0a098d700>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 48
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-14T21:54:27.098963Z",
-     "start_time": "2025-06-14T21:54:27.089989Z"
+     "end_time": "2025-06-17T20:43:58.141223Z",
+     "start_time": "2025-06-17T20:43:58.127261Z"
     }
    },
    "cell_type": "code",
@@ -190,26 +201,26 @@
    ],
    "id": "b1bf105ff1085202",
    "outputs": [],
-   "execution_count": 52
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-14T21:54:28.615985Z",
-     "start_time": "2025-06-14T21:54:28.606012Z"
+     "end_time": "2025-06-17T20:43:58.205051Z",
+     "start_time": "2025-06-17T20:43:58.192086Z"
     }
    },
    "cell_type": "code",
    "source": "from sksurv.metrics import concordance_index_ipcw, brier_score, cumulative_dynamic_auc",
    "id": "708d3d943805ade7",
    "outputs": [],
-   "execution_count": 53
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-14T21:54:29.683239Z",
-     "start_time": "2025-06-14T21:54:29.502723Z"
+     "end_time": "2025-06-17T20:43:58.457377Z",
+     "start_time": "2025-06-17T20:43:58.253922Z"
     }
    },
    "cell_type": "code",
@@ -260,15 +271,7 @@
      ]
     }
    ],
-   "execution_count": 54
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "f391f8b78713b563"
+   "execution_count": 10
   }
  ],
  "metadata": {
