add Benchmark Test

--- a/Test/DCM on support set.ipynb
+++ b/Test/DCM on support set.ipynb
@@ -196,7 +196,7 @@
    },
    "cell_type": "code",
    "source": [
-    "out_risk = model.predict_survival(x_test, times)\n",
+    "out_risk = 1 - model.predict_survival(x_test, times)\n",
     "out_survival = model.predict_survival(x_test, times)"
    ],
    "id": "b1bf105ff1085202",
