same test environment setting

--- a/Benchmark Test/Support_compare.ipynb
+++ b/Benchmark Test/Support_compare.ipynb
@@ -15,8 +15,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T20:51:22.686707Z",
-     "start_time": "2025-06-24T20:51:22.624873Z"
+     "end_time": "2025-06-25T21:04:32.286303Z",
+     "start_time": "2025-06-25T21:04:32.221473Z"
     }
    },
    "cell_type": "code",
@@ -35,7 +35,7 @@
    ],
    "id": "6ce0854996fff80a",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -46,8 +46,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T20:51:24.156775Z",
-     "start_time": "2025-06-24T20:51:24.102920Z"
+     "end_time": "2025-06-25T21:04:33.805235Z",
+     "start_time": "2025-06-25T21:04:33.734426Z"
     }
    },
    "cell_type": "code",
@@ -96,13 +96,13 @@
    ],
    "id": "7aaf7e3e6b9fd57",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T20:51:25.979900Z",
-     "start_time": "2025-06-24T20:51:25.974916Z"
+     "end_time": "2025-06-25T21:04:35.695181Z",
+     "start_time": "2025-06-25T21:04:35.684210Z"
     }
    },
    "cell_type": "code",
@@ -114,7 +114,7 @@
    ],
    "id": "a6f7b235b50ebfc0",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -125,8 +125,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T20:51:27.309949Z",
-     "start_time": "2025-06-24T20:51:27.303964Z"
+     "end_time": "2025-06-25T21:04:36.963788Z",
+     "start_time": "2025-06-25T21:04:36.954812Z"
     }
    },
    "cell_type": "code",
@@ -145,13 +145,13 @@
    ],
    "id": "eefd45c66181587f",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T20:51:28.652561Z",
-     "start_time": "2025-06-24T20:51:28.637565Z"
+     "end_time": "2025-06-25T21:04:38.186517Z",
+     "start_time": "2025-06-25T21:04:38.176545Z"
     }
    },
    "cell_type": "code",
@@ -198,7 +198,7 @@
    ],
    "id": "ac4e8e4734171cd",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -209,8 +209,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T20:51:30.573914Z",
-     "start_time": "2025-06-24T20:51:30.567929Z"
+     "end_time": "2025-06-25T21:04:40.014628Z",
+     "start_time": "2025-06-25T21:04:40.004655Z"
     }
    },
    "cell_type": "code",
@@ -218,23 +218,23 @@
     "from auton_survival.models.dsm import DeepSurvivalMachines\n",
     "\n",
     "DSM_param_grid = {\"distribution\": ['Weibull'],\n",
-    "                  \"k\": [3, 4],\n",
-    "                  \"layers\": [[], [50], [50, 50], [100], [100, 100]],\n",
-    "                  \"batch_size\": [128, 256],\n",
-    "                  \"learning_rate\": [ 1e-4, 1e-3],\n",
+    "                  \"k\": [3, 4, 6],\n",
+    "                  \"layers\": [[50], [50, 50], [100], [100, 100]],\n",
+    "                  \"batch_size\": [128],\n",
+    "                  \"learning_rate\": [1e-3],\n",
     "                  \"activation\": [\"SeLu\"]\n",
     "             }\n",
     "DSM_params = ParameterGrid(DSM_param_grid)"
    ],
    "id": "a8271acef2a37329",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T21:41:43.908287Z",
-     "start_time": "2025-06-24T21:41:43.894325Z"
+     "end_time": "2025-06-25T21:12:01.737697Z",
+     "start_time": "2025-06-25T21:12:01.724732Z"
     }
    },
    "cell_type": "code",
@@ -267,13 +267,13 @@
     "        x_test, t_test, e_test = test_set\n",
     "\n",
     "        out_survival = self.model.predict_survival(x_test, times)\n",
-    "        out_risk = 1 - self.model.predict_risk(x_test, times)\n",
+    "        out_risk = 1 - out_survival\n",
     "\n",
     "        return out_survival, out_risk\n"
    ],
    "id": "aeeb382e6aa2ddcc",
    "outputs": [],
-   "execution_count": 24
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -284,8 +284,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T21:41:38.914846Z",
-     "start_time": "2025-06-24T21:41:38.890432Z"
+     "end_time": "2025-06-25T21:12:09.270094Z",
+     "start_time": "2025-06-25T21:12:09.255134Z"
     }
    },
    "cell_type": "code",
@@ -339,13 +339,13 @@
    ],
    "id": "f1edfdce06c3612e",
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T21:54:46.685102Z",
-     "start_time": "2025-06-24T21:41:50.622746Z"
+     "end_time": "2025-06-25T21:18:42.472756Z",
+     "start_time": "2025-06-25T21:12:10.945612Z"
     }
    },
    "cell_type": "code",
@@ -376,24 +376,24 @@
      "text": [
       "  0%|          | 0/100 [00:00<?, ?it/s]D:\\anaconda3\\envs\\FLCausalMixture\\lib\\site-packages\\auton_survival\\models\\dcm\\dcm_utilities.py:105: RuntimeWarning: invalid value encountered in log\n",
       "  probs = gates+np.log(event_probs)\n",
-      "  5%|▌         | 5/100 [00:01<00:32,  2.95it/s]D:\\anaconda3\\envs\\FLCausalMixture\\lib\\site-packages\\auton_survival\\models\\dcm\\dcm_utilities.py:105: RuntimeWarning: divide by zero encountered in log\n",
+      "  5%|▌         | 5/100 [00:02<00:42,  2.23it/s]D:\\anaconda3\\envs\\FLCausalMixture\\lib\\site-packages\\auton_survival\\models\\dcm\\dcm_utilities.py:105: RuntimeWarning: divide by zero encountered in log\n",
       "  probs = gates+np.log(event_probs)\n",
-      " 11%|█         | 11/100 [00:03<00:30,  2.92it/s]D:\\anaconda3\\envs\\FLCausalMixture\\lib\\site-packages\\auton_survival\\models\\dcm\\dcm_utilities.py:58: RuntimeWarning: invalid value encountered in power\n",
+      " 11%|█         | 11/100 [00:04<00:34,  2.59it/s]D:\\anaconda3\\envs\\FLCausalMixture\\lib\\site-packages\\auton_survival\\models\\dcm\\dcm_utilities.py:58: RuntimeWarning: invalid value encountered in power\n",
       "  return spl(ts)**risks\n",
       "D:\\anaconda3\\envs\\FLCausalMixture\\lib\\site-packages\\auton_survival\\models\\dcm\\dcm_utilities.py:53: RuntimeWarning: invalid value encountered in power\n",
       "  s0ts = (-risks)*(spl(ts)**(risks-1))\n",
-      " 48%|████▊     | 48/100 [00:17<00:18,  2.79it/s]\n",
-      " 67%|██████▋   | 67/100 [00:31<00:15,  2.10it/s]\n",
-      " 30%|███       | 30/100 [00:14<00:33,  2.11it/s]\n",
+      " 48%|████▊     | 48/100 [00:18<00:20,  2.56it/s]\n",
+      " 67%|██████▋   | 67/100 [00:28<00:14,  2.35it/s]\n",
+      " 30%|███       | 30/100 [00:13<00:32,  2.18it/s]\n",
+      " 61%|██████    | 61/100 [00:33<00:21,  1.80it/s]\n",
+      " 34%|███▍      | 34/100 [00:17<00:34,  1.91it/s]\n",
       " 61%|██████    | 61/100 [00:32<00:20,  1.89it/s]\n",
-      " 34%|███▍      | 34/100 [00:16<00:31,  2.12it/s]\n",
-      " 61%|██████    | 61/100 [00:27<00:17,  2.25it/s]\n",
-      " 20%|██        | 20/100 [00:10<00:42,  1.89it/s]\n",
-      " 38%|███▊      | 38/100 [00:19<00:31,  1.97it/s]\n",
-      " 44%|████▍     | 44/100 [00:24<00:30,  1.83it/s]\n",
-      " 56%|█████▌    | 56/100 [00:31<00:24,  1.77it/s]\n",
-      " 19%|█▉        | 19/100 [00:11<00:49,  1.62it/s]\n",
-      " 48%|████▊     | 48/100 [00:30<00:33,  1.57it/s]\n"
+      " 20%|██        | 20/100 [00:10<00:43,  1.82it/s]\n",
+      " 38%|███▊      | 38/100 [00:21<00:35,  1.75it/s]\n",
+      " 44%|████▍     | 44/100 [00:29<00:38,  1.47it/s]\n",
+      " 56%|█████▌    | 56/100 [00:36<00:29,  1.52it/s]\n",
+      " 19%|█▉        | 19/100 [00:12<00:53,  1.52it/s]\n",
+      " 48%|████▊     | 48/100 [00:34<00:37,  1.39it/s]\n"
      ]
     },
     {
@@ -408,86 +408,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 510.13it/s]\n",
-      "100%|██████████| 100/100 [00:12<00:00,  7.74it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 510.28it/s]\n",
-      " 92%|█████████▏| 92/100 [00:12<00:01,  7.64it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 507.20it/s]\n",
-      " 93%|█████████▎| 93/100 [00:13<00:01,  6.70it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 505.56it/s]\n",
-      " 27%|██▋       | 27/100 [00:04<00:11,  6.46it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:15, 512.86it/s]\n",
-      " 67%|██████▋   | 67/100 [00:11<00:05,  6.08it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 506.66it/s]\n",
-      " 23%|██▎       | 23/100 [00:04<00:13,  5.66it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 500.64it/s]\n",
-      " 93%|█████████▎| 93/100 [00:14<00:01,  6.46it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 507.53it/s]\n",
-      " 17%|█▋        | 17/100 [00:02<00:13,  6.03it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 512.42it/s]\n",
-      " 60%|██████    | 60/100 [00:11<00:07,  5.22it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 511.88it/s]\n",
-      "  9%|▉         | 9/100 [00:01<00:18,  4.91it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 507.14it/s]\n",
-      "100%|██████████| 100/100 [00:14<00:00,  6.74it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 487.72it/s]\n",
-      " 92%|█████████▏| 92/100 [00:13<00:01,  6.68it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 505.34it/s]\n",
-      " 93%|█████████▎| 93/100 [00:15<00:01,  6.02it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 511.98it/s]\n",
-      " 34%|███▍      | 34/100 [00:05<00:11,  5.83it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 508.36it/s]\n",
-      " 67%|██████▋   | 67/100 [00:12<00:06,  5.47it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 509.18it/s]\n",
-      " 17%|█▋        | 17/100 [00:03<00:16,  5.16it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 505.27it/s]\n",
-      " 93%|█████████▎| 93/100 [00:16<00:01,  5.74it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:15, 518.27it/s]\n",
-      " 17%|█▋        | 17/100 [00:03<00:15,  5.33it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:15, 516.70it/s]\n",
-      " 36%|███▌      | 36/100 [00:07<00:13,  4.89it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 507.35it/s]\n",
-      " 14%|█▍        | 14/100 [00:02<00:18,  4.72it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 502.51it/s]\n",
-      "100%|██████████| 100/100 [00:12<00:00,  7.75it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 510.72it/s]\n",
-      " 92%|█████████▏| 92/100 [00:12<00:01,  7.61it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 505.46it/s]\n",
-      " 93%|█████████▎| 93/100 [00:13<00:01,  6.70it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 512.12it/s]\n",
-      " 27%|██▋       | 27/100 [00:04<00:11,  6.44it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 510.43it/s]\n",
-      " 67%|██████▋   | 67/100 [00:11<00:05,  5.98it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:15, 514.43it/s]\n",
-      " 23%|██▎       | 23/100 [00:03<00:13,  5.91it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 510.76it/s]\n",
-      " 93%|█████████▎| 93/100 [00:14<00:01,  6.42it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:15, 516.95it/s]\n",
-      " 17%|█▋        | 17/100 [00:02<00:14,  5.70it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 492.36it/s]\n",
-      " 60%|██████    | 60/100 [00:10<00:07,  5.54it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 504.40it/s]\n",
-      "  9%|▉         | 9/100 [00:01<00:18,  4.88it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 509.08it/s]\n",
-      "100%|██████████| 100/100 [00:14<00:00,  6.80it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:15, 518.20it/s]\n",
-      " 92%|█████████▏| 92/100 [00:13<00:01,  6.76it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:15, 513.04it/s]\n",
-      " 93%|█████████▎| 93/100 [00:15<00:01,  5.84it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:15, 513.43it/s]\n",
-      " 34%|███▍      | 34/100 [00:05<00:11,  5.88it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 507.09it/s]\n",
-      " 67%|██████▋   | 67/100 [00:12<00:05,  5.52it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:15, 513.92it/s]\n",
-      " 17%|█▋        | 17/100 [00:03<00:15,  5.29it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:15, 518.13it/s]\n",
-      " 93%|█████████▎| 93/100 [00:16<00:01,  5.81it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 508.84it/s]\n",
-      " 17%|█▋        | 17/100 [00:03<00:16,  5.14it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:16, 512.32it/s]\n",
-      " 36%|███▌      | 36/100 [00:07<00:12,  5.02it/s]\n",
-      " 18%|█▊        | 1797/10000 [00:03<00:15, 515.24it/s]\n",
-      " 14%|█▍        | 14/100 [00:02<00:17,  4.79it/s]"
+      " 18%|█▊        | 1797/10000 [00:03<00:17, 457.07it/s]\n",
+      " 27%|██▋       | 27/100 [00:04<00:12,  5.85it/s]\n",
+      " 18%|█▊        | 1797/10000 [00:03<00:18, 450.73it/s]\n",
+      " 23%|██▎       | 23/100 [00:04<00:14,  5.23it/s]\n",
+      " 18%|█▊        | 1797/10000 [00:03<00:17, 476.10it/s]\n",
+      " 17%|█▋        | 17/100 [00:03<00:14,  5.63it/s]\n",
+      " 18%|█▊        | 1797/10000 [00:04<00:18, 436.70it/s]\n",
+      "  9%|▉         | 9/100 [00:02<00:20,  4.43it/s]\n",
+      " 18%|█▊        | 1797/10000 [00:03<00:17, 456.21it/s]\n",
+      " 34%|███▍      | 34/100 [00:06<00:12,  5.40it/s]\n",
+      " 18%|█▊        | 1797/10000 [00:03<00:18, 453.10it/s]\n",
+      " 17%|█▋        | 17/100 [00:04<00:20,  4.03it/s]\n",
+      " 18%|█▊        | 1797/10000 [00:04<00:18, 433.19it/s]\n",
+      " 17%|█▋        | 17/100 [00:03<00:17,  4.82it/s]\n",
+      " 18%|█▊        | 1797/10000 [00:03<00:17, 475.21it/s]\n",
+      " 14%|█▍        | 14/100 [00:03<00:19,  4.35it/s]\n",
+      " 18%|█▊        | 1797/10000 [00:03<00:17, 472.14it/s]\n",
+      " 27%|██▋       | 27/100 [00:06<00:17,  4.14it/s]\n",
+      " 18%|█▊        | 1797/10000 [00:03<00:17, 457.65it/s]\n",
+      " 14%|█▍        | 14/100 [00:03<00:22,  3.86it/s]\n",
+      " 18%|█▊        | 1797/10000 [00:03<00:17, 467.88it/s]\n",
+      " 26%|██▌       | 26/100 [00:06<00:17,  4.16it/s]\n",
+      " 18%|█▊        | 1797/10000 [00:04<00:18, 445.11it/s]\n",
+      " 14%|█▍        | 14/100 [00:03<00:23,  3.59it/s]\n"
      ]
     },
     {
@@ -496,37 +440,30 @@
      "text": [
       "Fit complete!\n",
       "Predict complete!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "  Model  Train Time  Predict Time  0.25 quantile TD Concordance Index  \\\n",
-       "0   DCM  266.639422      0.000998                            0.771127   \n",
-       "1   DSM  509.018910      0.005984                            0.235730   \n",
+       "0   DCM  291.946101      0.000997                            0.771127   \n",
+       "1   DSM   99.105314      0.006980                            0.764754   \n",
        "\n",
        "   0.25 quantile Brier Score  0.25 quantile ROC AUC  \\\n",
        "0                   0.108708               0.781708   \n",
-       "1                   0.107729               0.227737   \n",
+       "1                   0.107793               0.777287   \n",
        "\n",
        "   0.5 quantile TD Concordance Index  0.5 quantile Brier Score  \\\n",
        "0                           0.717221                  0.178909   \n",
-       "1                           0.298051                  0.178950   \n",
+       "1                           0.701391                  0.178519   \n",
        "\n",
        "   0.5 quantile ROC AUC  0.75 quantile TD Concordance Index  \\\n",
        "0              0.741438                            0.673002   \n",
-       "1              0.274391                            0.330637   \n",
+       "1              0.726148                            0.671678   \n",
        "\n",
        "   0.75 quantile Brier Score  0.75 quantile ROC AUC  \n",
        "0                   0.220844               0.716491  \n",
-       "1                   0.215506               0.285361  "
+       "1                   0.213196               0.722964  "
       ],
       "text/html": [
        "<div>\n",
@@ -565,8 +502,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>DCM</td>\n",
-       "      <td>266.639422</td>\n",
-       "      <td>0.000998</td>\n",
+       "      <td>291.946101</td>\n",
+       "      <td>0.000997</td>\n",
        "      <td>0.771127</td>\n",
        "      <td>0.108708</td>\n",
        "      <td>0.781708</td>\n",
@@ -580,29 +517,29 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>DSM</td>\n",
-       "      <td>509.018910</td>\n",
-       "      <td>0.005984</td>\n",
-       "      <td>0.235730</td>\n",
-       "      <td>0.107729</td>\n",
-       "      <td>0.227737</td>\n",
-       "      <td>0.298051</td>\n",
-       "      <td>0.178950</td>\n",
-       "      <td>0.274391</td>\n",
-       "      <td>0.330637</td>\n",
-       "      <td>0.215506</td>\n",
-       "      <td>0.285361</td>\n",
+       "      <td>99.105314</td>\n",
+       "      <td>0.006980</td>\n",
+       "      <td>0.764754</td>\n",
+       "      <td>0.107793</td>\n",
+       "      <td>0.777287</td>\n",
+       "      <td>0.701391</td>\n",
+       "      <td>0.178519</td>\n",
+       "      <td>0.726148</td>\n",
+       "      <td>0.671678</td>\n",
+       "      <td>0.213196</td>\n",
+       "      <td>0.722964</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 25
+   "execution_count": 13
   }
  ],
  "metadata": {
