update cox regression

--- a/Test/eICU_DCM.ipynb
+++ b/Test/eICU_DCM.ipynb
@@ -15,8 +15,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T21:29:44.500362Z",
-     "start_time": "2025-07-08T21:29:43.017621Z"
+     "end_time": "2025-07-12T00:21:40.954318Z",
+     "start_time": "2025-07-12T00:21:35.919176Z"
     }
    },
    "cell_type": "code",
@@ -45,8 +45,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T21:29:44.562037Z",
-     "start_time": "2025-07-08T21:29:44.547843Z"
+     "end_time": "2025-07-12T00:21:40.985608Z",
+     "start_time": "2025-07-12T00:21:40.967609Z"
     }
    },
    "cell_type": "code",
@@ -92,8 +92,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T21:29:44.578037Z",
-     "start_time": "2025-07-08T21:29:44.574039Z"
+     "end_time": "2025-07-12T00:21:41.233508Z",
+     "start_time": "2025-07-12T00:21:41.221509Z"
     }
    },
    "cell_type": "code",
@@ -125,8 +125,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T21:29:44.685023Z",
-     "start_time": "2025-07-08T21:29:44.608030Z"
+     "end_time": "2025-07-12T00:21:41.435658Z",
+     "start_time": "2025-07-12T00:21:41.344275Z"
     }
    },
    "cell_type": "code",
@@ -289,7 +289,7 @@
    },
    "cell_type": "code",
    "source": [
-    "dcm_causal_effects = plot_DCM_avg_survival_curve(df=df_ps,\n",
+    "dcm_causal_effects = plot_avg_survival_curve(df=df_ps,\n",
     "                            group_index=train_group,\n",
     "                            model=dcm_model,\n",
     "                            covariates=covariates,\n",
@@ -403,7 +403,7 @@
    },
    "cell_type": "code",
    "source": [
-    "dsm_causal_effects = plot_DCM_avg_survival_curve(df=df_ps,\n",
+    "dsm_causal_effects = plot_avg_survival_curve(df=df_ps,\n",
     "                            group_index=np.zeros_like(train_group),\n",
     "                            model=dcm_model,\n",
     "                            covariates=covariates,\n",
@@ -450,6 +450,39 @@
     }
    ],
    "execution_count": 16
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 4. Cox Regression on eICU",
+   "id": "9d102c7040a79c36"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "CR_wrap = Cox_Regression_Wrapper()\n",
+    "CR_wrap.fit(train_set=train_set, val_set=val_set)\n",
+    "CR_model = CR_wrap.model"
+   ],
+   "id": "fa77977519eeeef4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "CR_causal_effects = plot_avg_survival_curve(df=df_ps,\n",
+    "                            group_index=np.zeros_like(train_group),\n",
+    "                            model=CR_model,\n",
+    "                            covariates=covariates,\n",
+    "                            treatment=\"treatment_1.0\"\n",
+    "                            )"
+   ],
+   "id": "3b5ac848bd7d9352"
   }
  ],
  "metadata": {
